# i18n-rs

./: Cargo.toml  DIOXUS.md  README.md  YEW.md
examples/dioxus/: Cargo.toml  Dioxus.toml  README.md
examples/dioxus-fullstack/: Cargo.toml  Dioxus.toml  README.md
examples/dioxus-fullstack/assets/: tailwind.css
examples/dioxus-fullstack/i18n/ar/: base.json
examples/dioxus-fullstack/src/: main.rs
examples/dioxus/assets/: styles.css
examples/dioxus/src/: main.rs
examples/yew/: Cargo.toml  README.md  index.html  tailwind.config.js
examples/yew/css/: tailwind.css
examples/yew/src/components/: landing.rs
examples/yew/src/pages/: landing.rs
src/: config.rs  dioxus.rs  lib.rs  yew.rs
