[package]
name = "dioxus-fullstack-i18nrs"
version = "0.1.0"
authors = ["wiseaidev <oss@wiseai.dev>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
dioxus-logger = "0.7.3"
i18nrs = { path = "../../", features = ["dio", "dio-ssr"] }

[features]
default = ["web"]
server = ["dioxus/server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
