[package]
name = "i18n-rs-dioxus-example"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
i18nrs = { path = "../../", features = ["dio"] }
dioxus-logger = "0.7.3"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
